--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <link rel="stylesheet" type="text/css" href="cvPageCSS.css">
     </head>
-    <body id="body" onload="deliverContent()">
+    <body id="body">
         <div class="container">
             <div id="intro">
                     <!-- NAVBAR inspired by example from bootstrap documentation, found here: https://getbootstrap.com/docs/4.3/components/navbar/ -->
@@ -18,16 +18,16 @@
                             <div class="collapse navbar-collapse d-flex justify-content-center">
                               <ul class="navbar-nav">
                                 <li class="nav-item">
-                                  <a class="nav-link" href="#about">About Me</a>
+                                  <a class="nav-link" href="#about" onclick="displayContentToggle(about)" >About Me</a>
                                 </li>
                                 <li class="nav-item">
-                                  <a class="nav-link" href="#education">Education </a>
+                                  <a class="nav-link" href="#education" onclick="displayContentToggle(education)">Education </a>
                                 </li>
                                 <li class="nav-item">
-                                  <a class="nav-link" href="#experience">Experience</a>
+                                  <a class="nav-link" href="#experience" onclick="displayContentToggle(experience)">Experience</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#workExamples">Work Examples</a>
+                                    <a class="nav-link" href="#workExamples" onclick="displayContentToggle(workExamples)">Work Examples</a>
                                   </li>
                               </ul>
                             </div>
