Content loads correctly
Now that the content loads correctly adding the hideContentBlocs function to the onload of the body should restore functionality.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <link rel="stylesheet" type="text/css" href="cvPageCSS.css">
     </head>
-    <body id="body">
+    <body id="body" onload="hideContentBlocs()">
         <div class="container">
             <div id="intro">
                     <!-- NAVBAR inspired by example from bootstrap documentation, found here: https://getbootstrap.com/docs/4.3/components/navbar/ -->
