Additions to about content
Additionally there have been changes to css for styling experimentation.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                     <h1  class = "catHeading">About Me</h1><br>
                         <p id = "aboutCont">
                             <p id = "aboutProgramming">
+                                <h5 class = "aboubtCat">Skills</h6>
                                 Throughout my time enrolled on the Computing course at UWE I have been exposed to or actively used many programming languages. Outside of my time at UWE I have started to use some of these programming languages personnally, mainly for experimentation or simply to practice problem solving or learn a new area of a lanaguage I had not been required to use at University.<br><br>
                                 
                                 I have used in some manner the following programming/scripting languages:
@@ -72,12 +73,22 @@
                                     </li>
                                 </ul>
                                 <br>
-                                Whilst using these programming language we also used XML and JSON technologies to help manage data.
+                                In addition to the programming language listed above we also used JSON and XML technologies to work with data. With XML explored the full eco system including: XSLT, XPath etc. However these were only brief periods of experimentation and did not fully cover the wide range of capabilities in these areas.
                             </p>
                             <p id = "aboutPersonal">
-                                MS Office: Word, Excel, PowerPoint, Outlook.
-                                Knowledge of computer hardware
-                                Comfortable working independently, as part of a team, or leading a team.
+                                <h5 class = "aboutCat">Interests</h6>
+                                My personal interests are centred around the world of science and technology, with Travel mixed in. Since this mix has resulted in a wide range of interests I have selected a few below.
+                                <ul id = "aboutPersonalInterestList">
+                                    <li>
+                                        <h6 class = "aboutPersonalListItemHead">Computer Hardware</h6> Due in part to spending a large amount of time around computers for working purposes and for recreational ones I have developed an interest in the hardware used within Desktop computers specifically. I enjoy researching the components used in a computer then the assembley process, while at times this can be frustrating it is very satisfying in the end. 
+                                    </li>
+                                    <li>
+                                        <h6 class = "aboutPersonalListItemHead">Photography</h6> Stemming from my interest in Travel Photography is a relatively recent interest of mine. While I am strictly an amatuer I enjoy trying to take the best pictures I am able to whilst travelling or if I happen to see something interesting. While my interest is centred around taking still images the use of drones for video recording or Photography in general is very interesting and in the future is an area I would like to explore more.
+                                    </li>
+                                    <li>
+                                        <h6 class = "aboutPersonalListItemHead">Travel</h6> I have been very fortunate to have been on many family holidays to a wide range of places. From this I have developed a particular interest in Cruising for travel purposes, which for me is the best way to travel since every night you go to sleep in your "Hotel" and its either at or going to a new desintation.
+                                    </li>
+                                </ul>
                             </p>
                         </p>
                 </div>
@@ -97,7 +108,7 @@
                   </ul>
                   <div id = "UWE" class = "eduSec">
                       <h2 class = "eduTitle">University of the West of England</h2>
-                      <h4 class = "awardTitle">BSc (Hons) Computing</h4>
+                      <h4 class = "awardTitle">BSc (Hons) Computing. Degree Classification - <a href = "content/Scan_20190720.png">First Class</a></h4>
                       <h6 class = "elapsedDates">2016 - 2019</h6>
                       <ul id = "UWEnav" class = "mNav">
                           <li class = "UWEnavItem mNavItem">
