More additions to about and experience
Most importantly added a profile picture, this image is subject to change.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                     <div id = "about" class = "contentBloc">
                     <h1  class = "catHeading">About Me</h1><br>
                         <p id = "aboutCont">
+                            <p id = "me">
+                                <img id = "profileIMG" class = "rounded" alt="Profile Image" src="content/profile.png">
+                            </p>
                             <p id = "aboutProgramming">
                                 <h5 class = "aboubtCat">Skills</h6>
                                 Throughout my time enrolled on the Computing course at UWE I have been exposed to or actively used many programming languages. Outside of my time at UWE I have started to use some of these programming languages personnally, mainly for experimentation or simply to practice problem solving or learn a new area of a lanaguage I had not been required to use at University.<br><br>
@@ -236,6 +239,12 @@
                 <p class = "desc">
                     <h5 id ="gawaTitle">Volunteer</h5><br>
                     Volunteering to help set up a location for the annual open day event. 
+                </p>
+                <h2 class = "location">Education at University</h2><br>
+                <h6 class = "elapsedDates">2016-2019</h6>
+                <p class = "desc">
+                    <h5 id ="gawaTitle">Student</h5><br>
+                    During semesters at University of the West of England (UWE) I devoted myself entirely to my studies. During the summer breaks between years I was fortunate to Travel with my family around Europe and Japan.
                 </p>
                 <h2 class = "location">B&Q</h2><br>
                 <h6 class = "elapsedDates">May - September 2016</h6>
