Added contact infomation to about

--- a/index.html
+++ b/index.html
@@ -40,10 +40,23 @@
                 <div id="content">
                     <div id = "about" class = "contentBloc">
                     <h1  class = "catHeading">About Me</h1><br>
-                        <p id = "aboutCont">
-                            <p id = "me">
-                                <img id = "profileIMG" class = "rounded" alt="Profile Image" src="content/profile.png">
-                            </p>
+                        <p id = "aboutCont" class = "d-flex justify-content-center">
+                            <div id = "me" class = "d-flex align-items-start">
+                                <img id = "profileIMG" class = "rounded d-flex" alt="Profile Image" src="content/profile.png">
+                                <p id = "contactDetails" class = "d-flex justify-content-center">
+                                    <ul id = "aboutContactList">
+                                        <li>
+                                            Email: gregcj@hotmail.co.uk
+                                        </li>
+                                        <li>
+                                            <a id="Linkedin" alt="Linkedin profile link" href = "https://www.linkedin.com/in/gregory-jones-a3ab68150/">Linkedin profile</a>
+                                        </li>
+                                        <li>
+                                            <a id="gitHub" alt="gitHub profile link" href = "https://github.com/jonesgc">github profile</a>
+                                        </li>
+                                    </ul>
+                                </p>
+                            </div>
                             <p id = "aboutProgramming">
                                 <h5 class = "aboubtCat">Skills</h6>
                                 Throughout my time enrolled on the Computing course at UWE I have been exposed to or actively used many programming languages. Outside of my time at UWE I have started to use some of these programming languages personnally, mainly for experimentation or simply to practice problem solving or learn a new area of a lanaguage I had not been required to use at University.<br><br>
