Added dowloadable pdf of CV

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <h1 id="pageHeader">Gregory Jones</h1>
                 <p id="introBlurb">
                     <br>
-                    Software Developer... More stuff here.
+                    Programmer and Science + Tech enthusiast
                 </p>
             </div>
             
@@ -59,6 +59,9 @@
                                 <li>
                                     <a id="gitHub" alt="gitHub profile link" href="https://github.com/jonesgc">github
                                         profile</a>
+                                </li>
+                                <li>
+                                    <a id="cvDL" alt = "a downloadable pdf of my CV" href = "content/GregJonesCV.pdf" download>My CV</a>
                                 </li>
                             </ul>
                         </p>
