Minor spelling corrections

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     Programmer and Science + Tech enthusiast
                 </p>
             </div>
-            
+
         </div>
         <div id="content">
             <div id="about" class="contentBloc">
@@ -149,7 +149,7 @@
                             England</a>
                     </li>
                     <li class="eduNavItem mNavItem">
-                        <a class="eduNavLink mNavLink" href="#Solent" onclick="eduNav('Solent')">Southamption Solent</a>
+                        <a class="eduNavLink mNavLink" href="#Solent" onclick="eduNav('Solent')">Southampton Solent</a>
                     </li>
                     <li class="eduNavItem mNavItem">
                         <a class="eduNavLink mNavLink" href="#Deanclose" onclick="eduNav('Deanclose')">Deanclose
@@ -380,7 +380,7 @@
                     </p><br>
                 </div>
                 <div id="Solent" class="eduSec">
-                    <h2 class="eduTitle">Southamption Solent University</h2>
+                    <h2 class="eduTitle">Southampton Solent University</h2>
                     <h4 class="awardTitle">Technology Foundation Year</h4>
                     <h6 class="elapsedDates">2013 - 2015</h6><br>
                     <p class="desc">A self-contained year which introduced basic programming techniques in C and
@@ -388,7 +388,8 @@
                         covered in prior education. </p>
                 </div>
                 <div id="Deanclose" class="eduSec">
-
+                  <h2 class="eduTitle">Dean Close School</h2>
+                  <p class="desc">Primary through to senior education. Including GCSEs and A levels.</p>
                 </div>
             </div>
             <!---->
