--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                                 All these topics were then included in some way into the Coursework which required us to
                                 individually perform similar tasks to what we did in the tutorial but often to a greater
                                 degree of complexity. This included performing a normalisation process on a case study
-                                and the generation of a functional Databases design on the senario. In addition to SQL
+                                and the generation of a functional Databases design on the scenario. In addition to SQL
                                 this coursework also included a segment on NoSQL, which we used MongoDB, were the
                                 requirement was to translate the SQL design into a NoSQL solution.
                             </p>
@@ -214,8 +214,8 @@
                             <p class="eduModuleDesc">
                                 Individual Report: Focusing on the Ethical issues that might be present in a certain
                                 area of Computing of our choosing, for example the Ethical Implications of facial
-                                Recognition in smart cities. This report had to be needed to be current to a degree
-                                which means it had to touch on GDPR which was a large focus of this module on this year,
+                                Recognition in smart cities. This report had to be on topics that were relevant at the time
+                                meaning it had to touch on GDPR which was a large focus of this module on this year,
                                 since it is was 2018 that GDPR came into effect. Our choice of topic also had to relate
                                 to members of a small team for the other part of the assessment for this module the
                                 Group Presentation.
@@ -235,34 +235,34 @@
                             </p>
                             <h6 class="moduleName">Computing Project</h6>
                             <p class="eduModuleDesc">
-                                Report (Disseration): The Computing Project module is the largest module in terms of
+                                Report (Dissertation): The Computing Project module is the largest module in terms of
                                 number of credits available, additionally it was the only module to run the course of
                                 both final semesters in the final year. The assignment can be divided into two elements,
-                                the the report and the software created as a result of the research for the report and
+                                the report and the software created as a result of the research for the report and
                                 used in the demonstration assignment of this module. The report element was on a topic
                                 of your own choosing, with input from a Supevisor relating to topic area for example if
                                 the topic chosen was on Web Technologies then the supevisor is ideally a lecturer with
                                 knowledge in that area. After the topic is selected work on the research for the project
-                                could beign, this research had be focused mainly on acedemic sources in reputable
+                                could beign. This research had be focused mainly on academic sources in reputable
                                 publications such as IEEE. The remainder of the report would be on the design of the
                                 software being created as a result of your research and the methodology behind your
                                 process. This project incorporated all of the elements taught in the other modules in
                                 all three years of the course.
                                 <br><br>
-                                Demonstration: This demonstration was conducted to your project supevisor and a seccond
+                                Demonstration: This demonstration was conducted to your project supervisor and a second
                                 marker. Focused on displaying the functionality of the software you had created and
-                                asnwering questions on the software and the report for your project.
+                                answering questions on the software and the report for your project.
                             </p>
                         </div>
                         <div id="yr2" class="eduYr">
                             <h5 class="eduYear">Year 2</h5>
-                            <h6 class="moduleName">Data, Schemas and Aplications</h6>
+                            <h6 class="moduleName">Data, Schemas and Applications</h6>
                             <p class="eduModuleDesc">
                                 Completion of Worksheets and Online Tutors: Series of tasks aimed at teaching key
                                 concepts of Web Development and Data related tasks, such as use of the XMl ecosystem.
                                 <br><br>
-                                Data Modeling, Integration and Presentation Task: Working in a small team of 4 persons,
-                                this assignement required the creation of a travel booking Website that incorporated
+                                Data Modelling, Integration and Presentation Task: Working in a small team of 4 persons,
+                                this assignment required the creation of a travel booking Website that incorporated
                                 elements of php, Java Script, HTML and XML. As part of this assignment it required an
                                 individual component based on the group project, for example the creation of a Flikr
                                 plugin that could be integrated into the main project. At the end of the assignment each
@@ -271,9 +271,9 @@
                             <h6 class="moduleName">Software Engineering</h6>
                             <p class="eduModuleDesc">
                                 Group Project Proposal: After investigation of various topics of software engineering
-                                and design as a group we had to create a project proposal to create a peiece of
+                                and design as a group we had to create a project proposal to create a piece of
                                 software, this included elements such as planned software development method which for
-                                this module was the Raitional Unified Process. This proposal was linked to the other two
+                                this module was the Rational Unified Process. This proposal was linked to the other two
                                 assessment items of this module.
                                 <br><br>
                                 Group Based and Individual Project Deliverables: For the individual element of this
@@ -289,8 +289,8 @@
                             <h6 class="moduleName">Operating Systems</h6>
                             <p class="eduModuleDesc">
                                 Log Book: Series of tasks introducing Operating Systems. The primary components of this
-                                asessment were on Pintos and required implementing a program stack. Then once the stack
-                                was impletmented a set of system calls were required to be implemented, such as wait or
+                                assessment were on Pintos and required implementing a program stack. Then once the stack
+                                was implemented a set of system calls were required to be implemented, such as wait or
                                 exit syscalls. This module also required the use of a Linux virtual machine as a
                                 development environment.
                             </p>
@@ -302,12 +302,12 @@
                                 about the use of the BBC Microbit to teach IoT concepts. The first task was an
                                 introduction into the BBC Microbit and as such it required the creation of some form of
                                 game on the Microbit, this helped introduce the hardware we had available on the
-                                Microbit such as the accelerometer. The seccond task was to pass some form of messages
+                                Microbit such as the accelerometer. The second task was to pass some form of messages
                                 from one Microbit to another, with the requirement that the message be encrypted in some
                                 form. This also required the user to be able to input a message on one microbit then see
                                 it displayed on the other connected microbit, this task used a wired connection between
                                 the microbits. The third task required using a wireless connection method to perform a
-                                similar function as the seccond task. An option was given in the thrid task to use Blue
+                                similar function as the second task. An option was given in the third task to use Blue
                                 Tooth Low Energy to do something.
                                 <br><br>
                                 Presentation: Requiring research into an aspect of IoT, such as use of IoT in smart
@@ -316,13 +316,13 @@
                             </p>
                             <h6 class="moduleName">C++ Development</h6>
                             <p class="eduModuleDesc">
-                                Portfolio tasks: The overral goal of this part of this assessment was to create a
+                                Portfolio tasks: The overall goal of this part of this assessment was to create a
                                 version of the Lorenz machine in C++. This assessment also introduced some software
                                 engineering tasks, such as the creation of a class diagram and then attempting to create
                                 a functioning program from the diagram. This module was the first real introduction into
                                 Object Oriented Programming (OOP) on the computing course. The assignment comprised of 5
                                 tasks, each task built from the previous one gradually building functionality into the
-                                overrall program.
+                                overall program.
                             </p>
                         </div>
                         <div id="yr1" class="eduYr">
@@ -367,7 +367,7 @@
                                 working data base, in phpmyadmin using sql. Assessed on demonstration of database in
                                 addition to knowledge of SQL and theoretical aspects of the system.
                             </p>
-                            <h6 class="moduleName">Principles Of Computing</h6>
+                            <h6 class="moduleName">Principles of Computing</h6>
                             <p class="eduModuleDesc">
                                 E assessment: This section focused on computing related mathematical concepts such as
                                 set theory, these assessments were done on-line via the university e - assessment tool.
@@ -416,7 +416,7 @@
                         <li id="bqJobTitle">Customer Assistant</li>
                         <li class="jobDescItem">Till operation including cash handling.</li>
                         <li class="jobDescItem">Stock organisation and replenishment.</li>
-                        <li class="jobDescItem">Handling customer inquries.</li>
+                        <li class="jobDescItem">Handling customer inquiries.</li>
                         <li class="jobDescItem">Part of a flexible team which changed to meet customer volumes depending
                             on time/day/season.</li>
                     </ul>
@@ -429,7 +429,7 @@
                     and other charities in Africa.
 
                     Donated computers would come from the community, local businesses, and larger entities such as the
-                    NHS trust in Cheltenham. Our work as volunteers as volunteers was to inspect each donated computer
+                    NHS trust in Cheltenham. Our work as volunteers was to inspect each donated computer
                     and prepare them for shipment. This process would entail troubleshooting, replacing faulty
                     components, salvaging usable components from unusable machines and deployment of new Operating
                     systems.
